--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
             <version>2.9.1</version>
         </dependency>
 		<dependency>
-		  <groupId>se.scalablesolutions.akka</groupId>
+		  <groupId>com.typesafe.akka</groupId>
 		  <artifactId>akka-actor</artifactId>
-		  <version>1.3</version>
+		  <version>2.0-M3</version>
 		</dependency>
         <dependency>
             <groupId>junit</groupId>
