--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,14 @@
             <version>2.9.1</version>
         </dependency>
 		<dependency>
+		    <groupId>edu.stanford.nlp</groupId>
+		    <artifactId>stanford-corenlp</artifactId>
+		    <version>1.3.0</version>
+		</dependency>
+		<dependency>
 		  <groupId>com.typesafe.akka</groupId>
 		  <artifactId>akka-actor</artifactId>
-		  <version>2.0-M3</version>
+		  <version>2.0-RC1</version>
 		</dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -49,6 +54,7 @@
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
+				<version>2.15.2</version>
                 <executions>
                     <execution>
                         <goals>
